# web-of-robotic-simulations

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile.discovery  Dockerfile.wos  HALF_CONTAINERIZED.md  LICENSE  README.md  ROS2_REMOVE_ENTITY_IMPLEMENTATION.md  compose.yaml  compose.yaml.bkup  cyclonedds.xml  fileUploader.js  fix-line-endings.bat  fix-line-endings.sh  native_api_and_ros2_calls.md  package-lock.json  package.json  ros2_launch_helper.js  sim.json  sim_server.js  sim_server_nodejs.js
Assets/gazebo/launch/examples/: battery.launch.py  diff_drive.launch.py
Assets/gazebo/models/examples/camera/: camera.sdf  model.config
Assets/urdf/examples/objects/ball/: ball.urdf  model.config
Assets/urdf/examples/objects/box/: box.urdf  model.config
Assets/urdf/examples/robots/ur10_rg2/: README.md  model.config  ur10_config.sh  ur10_controllers.yaml  ur10_rg2.urdf  ur10_rg2_coppelia.urdf  ur10_rg2_moveit_params.yaml  ur10_server.js  ur10_server_coppelia.js  ur10_server_gazebo.js
Assets/urdf/objects/ball/: model.config
Assets/urdf/objects/box/: model.config
Assets/urdf/robots/ur10_rg2/: model.config  ur10_config.sh  ur10_rg2.urdf  ur10_rg2_coppelia.urdf  ur10_server.js  ur10_server.json
bot_servers/: ur10_controller.js  ur10_controller.json
docker/: .dockerignore  Dockerfile.coppeliasim  Dockerfile.gazebo  Dockerfile.wot  compose.dev.yaml  compose.yaml  entrypoint-wos.sh  entrypoint-wot.sh  entrypoint.sh
main/: cs_controller.js  cs_controller.json  fileUploader.js  gz_controller.js  gz_controller.json  post_spawn_config.sh  start_process_supervisor.sh  start_robot_state_publisher.sh  start_wos.sh  ur10_test.sh  wos_server.sh
resource/model/: ball.urdf  box.urdf  camera_throttled.sdf  cube.urdf  ur10_rg2_nomimic.urdf  ur10_simple_gripper.urdf
resource/model/ur_description/: bkup.ur10_controllers.yaml  model.config  rg2.sdf  test.sdf  ur10.urdf  ur10_base.sdf  ur10_control.urdf  ur10_controlable.sdf  ur10_launch.py  ur10_rg2.urdf.bkup
resource/model/ur_description/ur10_rg2/: ur10_rg2.urdf.xacro
resource/world/: camera_sensor.sdf  camera_sensor_throttled.sdf  diff_drive.sdf  placeholder.txt
ros2_ws/src/: .gitignore
ros2_ws/src/gz_physics_bridge/: package.xml
ros2_ws/src/gz_physics_bridge/launch/: set_physics_server.launch.py
ros2_ws/src/gz_physics_bridge/src/: generate_world_sdf_server.cpp  pose_array_json_bridge.cpp  stats_bridge.cpp
ros2_ws/src/gz_physics_bridge_interfaces/: package.xml
ros2_ws/src/gz_physics_bridge_interfaces/srv/: SetPhysics.srv
ros2_ws/src/ros_gz_bridge_addon/: CMakeLists.txt
ros2_ws/src/sim_process_supervisor/: setup.cfg  setup.py
ros2_ws/src/sim_process_supervisor/launch/: supervisor.launch.py
ros2_ws/src/sim_process_supervisor_interfaces/srv/: ExecCmd.srv  ManagedList.srv  StartCmd.srv
ros_gz_bridge_addon/: .gitignore
ros_gz_bridge_addon/src/gz_physics_bridge/: CMakeLists.txt  package.xml
ros_gz_bridge_addon/src/gz_physics_bridge/launch/: bridge_throttled.launch.py  generate_world_sdf_server.launch.py
ros_gz_bridge_addon/src/gz_physics_bridge/src/: pose_info_json_bridge.cpp  set_physics_server.cpp
ros_gz_bridge_addon/src/gz_physics_bridge/srv/: GenerateWorldSdf.srv  SetPhysics.srv
ros_gz_bridge_addon/src/gz_physics_bridge_interfaces/: CMakeLists.txt  package.xml
ros_gz_bridge_addon/src/gz_physics_bridge_interfaces/msg/: LogPlaybackStatistics.msg  WorldStatistics.msg
ros_gz_bridge_addon/src/gz_throttle_tool/: CMakeLists.txt
ros_gz_bridge_addon/src/gz_throttle_tool/src/: throttle_relay.cc
ros_gz_bridge_addon/src/ros_gz_bridge_addon/: README.md  package.xml
ros_gz_bridge_addon/src/ros_gz_bridge_addon/launch/: ros_gz_bridge_addon.launch.py
ros_gz_bridge_addon/src/sim_process_supervisor/: package.xml  setup.py
ros_gz_bridge_addon/src/sim_process_supervisor/sim_process_supervisor/: process_supervisor.bkup  process_supervisor.py
ros_gz_bridge_addon/src/sim_process_supervisor_interfaces/: CMakeLists.txt  package.xml
ros_gz_bridge_addon/src/sim_process_supervisor_interfaces/srv/: ManagedStart.srv  ManagedStatus.srv
test/: README.md  WoT_API_Examples.md  bandwidth_test.sh  bookmark_buttons.txt  cleanup_test_uploads.sh  coppeliasim_test.py  cpu_logger.bash  cpu_logger.sh  fileUploader_test.py  gazebo_test.py  gz_controller.json  hello_world.js  hello_world.json  load_test.sh  simulator_test.py  start_wos.sh  test_gz_controller.js  test_publisher.js  test_ros2_serviceCall.js  test_subscriber.js  ur10_test.sh  wot_api_interactive.js
test/postman/: README.md  cs_controller.postman_environment.json  gz_controller.postman_environment.json  sim_controller.postman_collection.json
