<?xml version="1.0"?>
<package format="3">
  <name>gz_physics_bridge</name>
  <version>0.0.1</version>
  <description>ROS 2 C++ bridge that exposes /world/&lt;world&gt;/set_physics as a ROS service and calls Gazebo Transport directly.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core runtime/build deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Interface generation (for srv/SetPhysics.srv) -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Gazebo vendors (version-agnostic shims for Jazzy) -->
  <depend>gz_transport_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- (Optional) metadata -->
  <url type="website">https://gazebosim.org/</url>
  <url type="repository">https://example.com/your/repo</url>
  <url type="bugtracker">https://example.com/your/repo/issues</url>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
