<?xml version="1.0"?>
<package format="3">
  <name>gz_physics_bridge</name>
  <version>0.0.1</version>
  <description>ROS 2 C++ bridge that exposes /world/.../set_physics and /world/.../generate_world_sdf as ROS services and calls Gazebo Transport directly.</description>

  <maintainer email="evan.zhang@tum.de">evan</maintainer>
  <license>MIT License</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core runtime/build deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Interface generation (for srv/SetPhysics.srv) -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Gazebo vendors (version-agnostic shims for Jazzy) -->
  <depend>gz_transport_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <exec_depend>ros_gz_bridge</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
