<?xml version="1.0"?>
<package format="3">
  <name>gz_physics_bridge_interfaces</name>
  <version>0.1.0</version>
  <description>Custom interfaces for Gazebo physics control (SetPhysics).</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Generate code for .srv/.msg -->
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_export_depend>rosidl_default_generators</build_export_depend>

  <!-- Runtime for consumers (C++, Python, rclnodejs codegen) -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <!-- If you later add builtin_interfaces/std_msgs types, declare as deps:
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
