<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_process_supervisor</name>
  <version>0.0.0</version>
  <description>test package without container to test manage child_process via ros2</description>
  <maintainer email="evan.zhang@tum.de">evan</maintainer>
  <license>Apache-2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>sim_process_supervisor_interfaces</exec_depend>
  
    
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
